--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "yaosome",
-  "version": "1.0.0",
+  "version": "0.2.5",
   "description": "yaosome",
-  "main": "index.js",
+  "engines": {
+    "node": "5.9.1"
+  },
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
