--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-stormpath": "^3.1.2",
     "forms": "^1.1.4",
     "jade": "^1.11.0",
+    "nodemailer": "^2.4.2",
     "xtend": "^4.0.1"
   }
 }
